* 2014-11-06 - thorben.betten@open-xchange.com

 - Fix for bug 35374: Pass incoming request's IP address on redeem token call
 - Fix for bug 35359: Improved special /ajax/mail?action=all request fired when loading portal page

* 2014-11-05 - thorben.betten@open-xchange.com

 - Fix for bug 35139: Allow "data" URI scheme in <img> src attribute
 - Fix for bug 35348: Drop weird attributes from start tags that break HTML parsing and added <center> tag to white-list

* 2014-11-03 - thorben.betten@open-xchange.com

 - Fix for bug 35291: Obey forbidden end tags when generating conform/well-formed HTML content
 - Fix for bug 34979: Honor "setFrom" parameter when composing forward message

* 2014-10-31 - thorben.betten@open-xchange.com

 - Fix for bug 35267: Explicitly specify header encoding when parsing multipart/form-upload requests with Apache FileUpload

* 2014-10-30 - marcus.klein@open-xchange.com

 - Fix for bug 34981: Corrected post installation script for property com.openexchange.sessiond.remoteParameterNames in sessiond.properties
   configuration file.

* 2014-10-30 - thorben.betten@open-xchange.com

 - Fix for bug 35242: Added null guard & improved logging behavior to provide mail information in order to identify the mail later on

* 2014-10-29 - martin.schneider@open-xchange.com

 - Fix for bug 35073: set default subject when processed mail was sent without subject
 - Fix for bug 34894: set default subject when processed mail was sent without subject

* 2014-10-29 - thorben.betten@open-xchange.com

 - Fix for bug 35255: Also consider file extension if mail part claims to be HTML by Content-Type

* 2014-10-27 - marc.arens@open-xchange.com

 - Fix for bug 34973: Allow minimal caching to prevent superfluous browser requests.
 - Fix for bug 35154: Shut down StateManager and interrupt already running CleanupTimer

* 2014-10-27 - thorben.betten@open-xchange.com

 - Fix for bug 35198: Use Jericho HTML parser to perform necessary modifications
